Web Inspector: Sending XHR with UTF8 encoded data shows garbled data in Resource sidebar https://bugs.webkit.org/show_bug.cgi?id=159358

Patch by Johan K. Jensen <jj@johanjensen.dk> on 2016-07-01
Reviewed by Joseph Pecoraro.

Source/WebCore:

Test: http/tests/inspector/network/xhr-request-data-encoded-correctly.html

* inspector/InspectorNetworkAgent.cpp:
(WebCore::buildObjectForResourceRequest):

LayoutTests:

Based on Chromium patch:
<https://chromium.googlesource.com/chromium/src/+/bcbb663864624ab38b36731eb2edc839a90f9e65%5E%21/#F2>

* http/tests/inspector/network/xhr-request-data-encoded-correctly-expected.txt:
* http/tests/inspector/network/xhr-request-data-encoded-correctly.html:

Canonical link: https://commits.webkit.org/177497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202766 268f45cc-cd09-0410-ab3c-d52691b4dbfc